--- a/less/cerulean.less
+++ b/less/cerulean.less
@@ -13,10 +13,6 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-ul.nav li.dropdown:hover > ul.dropdown-menu {
-    display: block;
-}
-
 header.navbar {
   margin: 0 !important;
   border-radius: 0 !important;
@@ -175,6 +171,12 @@ body {
     }
     flex-grow: 2000;
   }
+}
+
+:hover > ul.dropdown-menu {
+  display: block;
+  max-height: 240px !important;
+  overflow-y: scroll !important;
 }
 
 body > footer {
